--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "fumadocs-mdx": "^13.0.0",
     "glob": "^11.0.3",
     "jsdom": "^27.0.1",
+    "shiki": "^3.14.0",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3",
     "unified": "^11.0.5",
