--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,14 @@
       "@/.source": [
         "./.source/index.ts"
       ],
+      "@/types": [
+        "./types/index.ts"
+      ],
       "@/*": [
-        "./*"
+        "./src/*"
+      ],
+      "~/*": [
+        "./fumadocs/*"
       ]
     }
   },
