fix: 自定义vscode图标

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
   "prettier.configPath": ".prettierrc",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "material-icon-theme.folders.associations": {
+    "blocks": "components",
+    "components": "components",
+    "fumadocs-mdx-component": "components",
+    "utils": "tools",
+    "lib": "tools",
+    "fumadocs": "docs",
+    "registry": "repository"
+  }
 }
