--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3",
     "unified": "^11.0.5",
+    "use-immer": "^0.11.0",
     "vitest": "^4.0.3"
   },
   "pnpm": {
