--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.3",
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/mdast": "^4.0.4",
@@ -43,8 +44,7 @@
     "@types/node": "^20.19.23",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
-    "eslint": "^9.38.0",
-    "eslint-config-next": "16.0.0",
+    
     "fumadocs-mdx": "^13.0.0",
     "glob": "^11.0.3",
     "jsdom": "^27.0.1",
