--- a/biome.json
+++ b/biome.json
@@ -21,7 +21,8 @@
 			"recommended": true,
 			"suspicious": {
 				"noExplicitAny": "off"
-			}
+			},
+			"a11y": "off"
 		}
 	},
 	"javascript": {
