--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,7 @@
 	},
 	"formatter": {
 		"enabled": true,
-		"indentStyle": "tab",
+		"indentStyle": "space",
 		"lineWidth": 120,
 		"indentWidth": 2
 	},
