--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "biome format --write",
     "lint": "biome lint --write",
     "lint:unsafe": "biome lint --write --unsafe",
-    "check": "biome check --write"
+    "check": "biome check"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.12",
