--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         run: pnpm install
 
       - name: Build website
-        run: pnpm build
+        run: pnpm build:static
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
