--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "format": "biome format --write",
     "lint": "biome lint --write",
     "lint:unsafe": "biome lint --write --unsafe",
-    "check": "biome check"
+    "check": "biome check",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:reload": "pm2 reload ecosystem.config.js",
+    "pm2:stop": "pm2 stop next-app",
+    "pm2:delete": "pm2 delete next-app"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.12",
