--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "pnpm run registry:build && next build",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=1024' pnpm run registry:build && next build",
     "build:static": "cross-env EXPORT_STATIC=true pnpm run registry:build && next build",
     "start": "next start",
     "pm2:start": "pm2 start ecosystem.config.js",
