--- a/biome.json
+++ b/biome.json
@@ -20,7 +20,8 @@
     "rules": {
       "recommended": true,
       "suspicious": {
-        "noExplicitAny": "off"
+        "noExplicitAny": "off",
+        "noArrayIndexKey": "off"
       },
       "a11y": "off"
     }
