--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "cross-env NODE_OPTIONS='--max-old-space-size=1024' pnpm run registry:build && next build",
-    "build:static": "cross-env EXPORT_STATIC=true pnpm run registry:build && next build",
+    "build:static": "cross-env-shell EXPORT_STATIC=true \"pnpm run registry:build && next build\"",
     "start": "next start",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:reload": "pm2 reload ecosystem.config.js",
