--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env NODE_OPTIONS='--max-old-space-size=1024' pnpm run registry:build && next build",
-    "build:static": "cross-env-shell EXPORT_STATIC=true \"pnpm run registry:build && next build\"",
+    "build:core": "pnpm run registry:build && next build",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=1024' pnpm run build:core",
+    "build:static": "cross-env-shell EXPORT_STATIC=true pnpm run build:core",
+    "docker:build": "chmod +x scripts/docker.sh && scripts/docker.sh",
     "start": "next start",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:reload": "pm2 reload ecosystem.config.js",
     "pm2:stop": "pm2 stop next-app",
     "pm2:delete": "pm2 delete next-app",
-    "docker:build": "chmod +x scripts/docker.sh && scripts/docker.sh",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
