--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["fumadocs/**/*.{ts,tsx,js,jsx}", "src/**/*.{ts,tsx,js,jsx}"]
+    "includes": ["fumadocs/**/*.{ts,tsx,js,jsx,json}", "src/**/*.{ts,tsx,js,jsx}"]
   },
   "formatter": {
     "enabled": true,
