--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build:core": "pnpm run registry:build && next build",
-    "build": "cross-env NODE_OPTIONS='--max-old-space-size=1024' pnpm run build:core",
-    "build:static": "cross-env-shell EXPORT_STATIC=true pnpm run build:core",
+    "build": "pnpm run registry:build && next build",
+    "build:static": "cross-env-shell EXPORT_STATIC=true \"pnpm run registry:build && next build\"",
     "docker:build": "chmod +x scripts/docker.sh && scripts/docker.sh",
     "start": "next start",
     "pm2:start": "pm2 start ecosystem.config.js",
