feat: 添加新的 tiptap 的插件用于收集用户输入

--- a/biome.json
+++ b/biome.json
@@ -23,6 +23,9 @@
         "noExplicitAny": "off",
         "noArrayIndexKey": "off"
       },
+      "style": {
+        "noNonNullAssertion": "off"
+      },
       "a11y": "off"
     }
   },
